2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	  bump nano

=== release 0.1.0 ===

2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* README:
	  more notes and fixes

2004-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* README:
	* build.xml:
	  updates for public release

=== release 0.0.1 ===

2004-11-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	* build.xml:
	  add targets for two kinds of applets and version

	* stubs/sun/audio/AudioPlayer.java:
	* stubs/sun/audio/AudioStream.java:
	  Fix stubs by decompiling the sun java class files

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* com/fluendo/player/Cortado.java:
	  fix compiler warning

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  allow excluding functionality with -Dexclude=(which,...)

2004-11-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Wim Taymans

	* com/fluendo/player/Cortado.java:
	* com/fluendo/player/Status.java:
	  Replace getWidth and getHeight with getSize (1.1)